--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio-photo-2.jpg"
+  avatar           : "minwenwen.jpg"
   name             : "Wenwen Min"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : 医学人工智能
   location         : "Kunming, Yunnan, China"
   employer         : "Yunnan University"
   uri              : #URL 
