--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,13 @@ author:
   email            : "minwenwen@aliyun.com" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=0Uy0GnoAAAAJ&hl=en"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-2558-2911"
+  researchgate     : "https://www.researchgate.net/profile/Wenwen-Min/research"
+  arxiv            : # URL - Update with the correct link to your profile
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
