--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "minwenwen.jpg"
   name             : "Wenwen Min"
   pronouns         : # example: "she/her"  
-  bio              : 研究方向：医学人工智能，机器学习
+  bio              : "医学人工智能"
   location         : "Kunming, Yunnan, China"
   employer         : "Yunnan University"
   uri              : #URL 
