--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,19 +2,19 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
+  - title: "News"
     url: /year-archive/
+
+#  - title: "Talks"
+#    url: /talks/    
+
+#  - title: "Teaching"
+#    url: /teaching/    
     
+#- title: "Portfolio"
+#    url: /portfolio/
+        
 #- title: "cv"
 #    url: /cv/
     
