--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Software"
     url: /software/
     
-#  - title: "News"
-#    url: /year-archive/
+  - title: "Blog"
+    url: /year-archive/
 
 #  - title: "Talks"
 #    url: /talks/    
