--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
   # Academic websites
   googlescholar    : "https://scholar.google.com/citations?user=0Uy0GnoAAAAJ&hl=en"
   researchgate     : "https://www.researchgate.net/profile/Wenwen-Min/research"
-  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-2558-2911"
+  orcid            : "https://orcid.org/0000-0002-2558-2911" 
   arxiv            : # URL - Update with the correct link to your profile
   impactstory      : # URL
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
