--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "minwenwen.jpg"
+  avatar           : "minwenwen20240628.jpg"
   name             : "Wenwen Min"
   pronouns         : # example: "she/her"  
   bio              : "医学人工智能"
