--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,9 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "minwenwen02.jpg"
+  # minwenwen20240628.jpg
+  # minwenwen02.jpg
+  avatar           : "minwenwen03.jpg"
   name             : "Wenwen Min (闵文文)"
   pronouns         : # example: "she/her"  
   bio              : "医学人工智能"
