--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ author:
 
   # Academic websites
   googlescholar    : "https://scholar.google.com/citations?user=0Uy0GnoAAAAJ&hl=en"
-  orcid            : "https://orcid.org/0000-0002-2558-2911" 
   researchgate     : "https://www.researchgate.net/profile/Wenwen-Min/research"
-  arxiv            : # URL - Update with the correct link to your profile
-  impactstory      : # URL
+  orcid            : "https://orcid.org/0000-0002-2558-2911" 
+  Github           : "https://github.com/wenwenmin"
+  My YUN      : "http://www.ise.ynu.edu.cn/teacher/990"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
 
 
