--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   bio              : "医学人工智能"
   location         : "Kunming, Yunnan, China"
   employer         : "Yunnan University"
-  uri              : #URL 
+  uri              : https://github.com/wenwenmin 
   email            : minwenwen@aliyun.com
 
   # Academic websites
